# course-parallel-programming

./: .gitignore  404.html  package-lock.json  package.json  parallel-programming.code-workspace  site.yml  sitemap-feelpp-antora-ui.xml  sitemap-parallel-programming.xml
.github/workflows/: ci.yml
docs/: CMakeLists.txt  antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: CUDA_Coding.adoc  HEAT_Coding.adoc  HIP_Coding.adoc  MPI_Coding.adoc  OpenMP_Coding.adoc  PPChapter1_AMD_CUDA.adoc  PPChapter1_CPU.adoc  PPChapter1_DPU.adoc  PPChapter1_LPU.adoc  PPChapter1_NPU.adoc  PPChapter1_SIMD.adoc  PPChapter1_TPU.adoc  PPChapter2.adoc  PPChapter2_Hybrid.adoc  PPChapter2_OpenMP.adoc  PPChapter3.adoc  PPChapter4.adoc  antora.adoc  index.adoc  quickstart.adoc
docs/modules/ROOT/pages/architectures/: PPChapter1_DPU.adoc  PPChapter1_GPGPU.adoc  PPChapter1_NPU.adoc
docs/modules/kokkos/: nav.adoc
docs/modules/kokkos/examples/: README.adoc
docs/modules/kokkos/examples/src/: 00_views.cpp  01_views_1D.cpp  02_views_2D.cpp  03_views_properties.cpp  04_kokkos_exercise_views.cpp  05_kokkos_mirrors.cpp  100_none.cpp  10_kokkos_cholesky.cpp  11_kokkos_memspace.cpp  12_kokkos_simple_multi_gpus.cpp  13_kokkos_execution_patterns.cpp  14_kokkos_execution_patterns_policies.cpp  15_kokkos_dual_view.cpp  16_kokkos_simd.cpp  17_kokkos_polynom_jacobi_1.cpp  18_layout_Left.cpp  19_layout_Right.cpp  20_reduction.cpp  21_reduction_multiple.cpp  22_hierarchical_parallelism.cpp  23_nested_parallelism.cpp  24_combined_team_thread_range_thread_vector_range.cpp  25_asynchronicity.cpp  26_stream.cpp  CMakeLists.txt  feelpp_kokkos.cpp
docs/modules/kokkos/pages/: gaya.adoc
docs/modules/kokkos/pages/advanced-concepts/: advanced-reductions.adoc  asynchronicity-and-streams.adoc  hierarchical-parallelism.adoc  index.adoc  mpi-pgas.adoc  mpi-vs-pgas.adoc  mpi.adoc  multidimensional-loops-and-data-structure.adoc  pgas.adoc  single-instruction-mutliple-data.adoc
docs/modules/kokkos/pages/basic-concepts/: execution-spaces.adoc  index.adoc  memory-access-patterns.adoc  memory-spaces.adoc  mirrors.adoc  mirrors_sol_code.adoc  views.adoc  views_exercice_tutorial.adoc
docs/modules/kokkos/pages/coding/: Kokkos_coding.adoc  MCQ.adoc  MCQ_001.adoc  MCQ_002.adoc  MCQ_003.adoc  MCQ_004.adoc  MCQ_005.adoc  MCQ_006.adoc  MCQ_007.adoc
docs/modules/kokkos/pages/diagnostic-tools-algebraic-strategies/: index.adoc  kernels-math-library.adoc  tools-profiling-tuning-debugging.adoc
docs/modules/kokkos/pages/introduction/: installation.adoc  why-kokkos.adoc
feelpp-antora-ui/: admonition-styles.html  copy-to-clipboard.html  index.html  inline-text-styles.html  page-layouts.html  plotly.html  pseudocode.html  source-highlighting.html  style-guide.html
feelpp-antora-ui/asciidoc/: admonitions.html  bold.html  examples.html  highlight.html  italic.html  monospace.html
feelpp-antora-ui/catalogExample/: catalog.html  itemA.html  itemB.html  itemC.html  subitemA1.html  subitemA2.html
parallel-programming/: CUDA_Coding.html  HEAT_Coding.html  HIP_Coding.html  Hybrid_Coding.html  MPI_Coding.html  OpenMP_Coding.html  PPChapter1_AMD_CUDA.html  PPChapter1_CPU.html  PPChapter1_DPU.html  PPChapter1_GPGPU.html  PPChapter1_GPU.html  PPChapter1_LPU.html  PPChapter1_NPU.html  PPChapter1_SIMD.html  PPChapter1_TPU.html  PPChapter2.html  PPChapter2_Hybrid.html  PPChapter2_MPI.html  PPChapter2_MPI_Boost.html  PPChapter2_OpenMP.html  PPChapter2_OpenMP2.html  PPChapter3.html  PPChapter4.html  PPLinkPDFs.html  PPSummary.html  SPECX_Coding.html  antora.html  cmake.html  githubactions.html  index.html  jupyter.html  overview.html  quickstart.html  rename.html  vscode.html
parallel-programming/architectures/: PPChapter1_AMD_CUDA.html  PPChapter1_CPU.html  PPChapter1_DPU.html  PPChapter1_GPGPU.html  PPChapter1_GPU.html  PPChapter1_LPU.html  PPChapter1_NPU.html  PPChapter1_SIMD.html  PPChapter1_TPU.html
parallel-programming/kokkos/: gaya.html  index.html
parallel-programming/kokkos/advanced-concepts/: advanced-reductions.html  asynchronicity-and-streams.html  hierarchical-parallelism.html  index.html  mpi-pgas.html  mpi-vs-pgas.html  mpi.html  multidimensional-loops-and-data-structure.html  pgas.html  single-instruction-mutliple-data.html
parallel-programming/kokkos/basic-concepts/: execution-spaces.html  index.html  memory-access-patterns.html  memory-spaces.html  mirrors.html  mirrors_sol_code.html  views.html  views_exercice_tutorial.html
parallel-programming/kokkos/diagnostic-tools-algebraic-strategies/: index.html  kernels-math-library.html  tools-profiling-tuning-debugging.html
parallel-programming/kokkos/introduction/: installation.html  why-kokkos.html
src/: CMakeLists.txt
src/Benchmark/Cholesky/Cholesky_GPU_HIP/: CMakeLists.txt  DataAnalysis.py  main.cpp
src/Benchmark/Cholesky/Cholesky_MPI/: CMakeLists.txt  main.cpp
src/Benchmark/Cholesky/Cholesky_Multi_GPU_HIP_MPI/: main.cpp
src/Benchmark/HipGraph/: main.cpp
src/Benchmark/Specx/Specx_GPU_HIP/: CMakeLists.txt  main.cpp
src/HIP/Practice2/: CMakeLists.txt  Test.cpp
src/HIP/Practice3/: Test.cpp
src/HIP/Practice4/: CMakeLists.txt  Test.cpp
src/HIP/Practice5/: Test.cpp
src/HIP/Practice6/: Test.cpp
src/MPI/: CMakeLists.txt  MPI_Philosophers.c  MPI_many_messages.c  MPI_many_messages2.c
